--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "lab6",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,5 +13,6 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0"
-  }
+  },
+  "description": ""
 }
